css/2013.css
/* ... */
.iv-branding .branding-context-container-inner {
	display: none !important;
}

.ytp-player-content.ytp-iv-player-content {
	transition: .5s !important;
}

/* ################################# */

/* AUTO-HIDE PLAYER */

.ytp-chrome-bottom {
    bottom: 0;
    transition: all .5s cubic-bezier(0.0,0.0,0.2,1) !important;
}

.ytp-autohide:not(.ytp-watch-controls) .ytp-chrome-bottom, .ytp-chrome-bottom[aria-hidden=true] {
    opacity: 1 !important;
    bottom: -40px;
}

.ytp-big-mode.ytp-autohide:not(.ytp-watch-controls) .ytp-chrome-bottom, .ytp-big-mode .ytp-chrome-bottom[aria-hidden=true] {
    opacity: 1 !important;
    bottom: -41px;
}

.ytp-progress-bar-container {
    transition: all .5s cubic-bezier(0.0,0.0,0.2,1) !important;
}

.ytp-autohide .ytp-progress-bar {
    height: 5px;
}

.ytp-autohide .ytp-player-content:not(.html5-endscreen) {
    transition: bottom .5s cubic-bezier(0.0,0.0,0.2,1), top .5s cubic-bezier(0.0,0.0,0.2,1);
}

.ytp-autohide:not(.ytp-ad-overlay-open) .ytp-subtitles-player-content:not(.html5-endscreen):not(.ytp-iv-player-content) {
    bottom: 1em !important;
}

/* ################################# */

/* SCRUBBER */

.ytp-scrubber-button {
	background: url(chrome-extension://__MSG_@@extension_id__/img/2013-scrubber.png) !important;
	background-position: 0px 0px !important;
	background-size: 18px !important;
	height: 18px !important;
	width: 18px !important;
	border: none;
	position: relative;
}

.ytp-scrubber-button:hover {
	background: url(chrome-extension://__MSG_@@extension_id__/img/2013-scrubber-hover.png) !important;
	background-position: 0px 0px !important;
	background-size: 18px !important;
	height: 18px !important;
	width: 18px !important;
}

.ytp-scrubber-button.ytp-swatch-background-color {
	background-color: transparent !important;
}

.ytp-scrubber-container {
	top: 1px !important;
    left: -15px !important;
    margin-top: -5px;
}

.ytp-big-mode .ytp-scrubber-button {
	left: 0px !important;
	top: 0px !important;
}

.ytp-progress-bar-container:hover:not([aria-disabled=true]) .ytp-scrubber-button.ytp-scrubber-button-hover {
	transform: scale(1) !important;
}

/* ################################# */

/* HEAT MAP */

.ytp-progress-bar-container .ytp-heat-map-container {
    top: -45px;
}

.ytp-heat-map-chapter.ytp-heatmap-hover {
    bottom: 0px !important;
}

/* ################################# */

/* BUTTONS BASE */

.ytp-larger-tap-buttons .ytp-chrome-bottom {
	transition: .5s !important;
	width: inherit !important;
	height: 35px !important;
	left: unset !important;
}

.ytd-channel-video-player-renderer .ytp-chrome-bottom {
	height: 35px !important;
}

.ytp-larger-tap-buttons .ytp-chrome-bottom .ytp-chrome-controls {
	position: relative;
	transition: .5s;
	height: 35px;
}

.ytp-chrome-bottom .ytp-button, .ytp-chrome-top .ytp-button {
	position: sticky !important;
	height: 35px !important;
	width: 40px;
	bottom: 9px;
}

.ytp-chrome-bottom .ytp-right-controls .ytp-button {
	width: 35px;
}

.ytp-autohide .ytp-chrome-top {
    display: none;
}

.ytp-chrome-bottom .ytp-button {
	background-size: 200px;
}

.ytp-button svg {
	display: none;
}

.ytp-button.ytp-sb.ytp-sb-subscribed {
	width: auto;
}

.ytp-button:hover {
    filter: brightness(1.15);
}

/* ################################# */

/* LEFT BUTTONS */

.ytp-left-controls {
	position: relative;
	padding-left: 10px;
	top: 0;
}

/* TIME DISPLAY */

.ytp-chrome-bottom .ytp-time-display {
	line-height: 47px !important;
    padding: 0px 10px;
    margin-top: -7px;
    font-size: 12px;
    height: 46px;
}

.ytp-time-current {
	color: var(--pt-progress-text) !important;
	text-shadow: none;
}

.ytp-time-separator, .ytp-time-duration {
	color: var(--pt-alt-progress-text) !important;
	text-shadow: none;
}

/* CHAPTER TITLE */

.ytp-chrome-bottom .ytp-chapter-title.ytp-button {
    width: auto !important;
}

.ytp-big-mode .ytp-chapter-title {
	font-size: 14px;
}

.ytp-chrome-bottom .ytp-chapter-container {
    color: var(--pt-progress-text) !important;
}

.ytp-chapter-container .ytp-chapter-title-content {
	margin-bottom: 2px;
}

.ytp-chapter-container .ytp-chapter-title-prefix {
	margin-bottom: 2px;
}

/* ################################# */

/* VOLUME PANEL */

.ytp-volume-panel {
	transition: .5s !important;
	position: relative;
	padding-left: 8px;
    bottom: 1px
}

.ytp-volume-slider-active .ytp-volume-panel {
	width: 46px !important;
}

.ytp-big-mode .ytp-volume-slider-active .ytp-volume-panel {
	width: 68px !important;
}

.ytp-big-mode .ytp-volume-panel .ytp-volume-slider {
	min-height: 50px !important;
}

.ytp-volume-panel .ytp-volume-slider-handle {
	position: absolute;
	border-radius: 2px;
	margin-top: 0;
	height: 14px;
	width: 5px;
	top: 30%;
}

.ytp-volume-slider-handle::before {
	background: var(--pt-main-colour);
    height: 4px;
}

.ytp-volume-slider-handle::after {
    height: 5px;
}

.ytp-big-mode .ytp-volume-panel .ytp-volume-slider-handle {
	border-radius: 0px !important;
	margin-top: 0 !important;
	height: 14px !important;
	width: 5px !important;
	position: absolute;
	top: 20%;
}

.ytp-big-mode .ytp-volume-slider-handle:before {
    width: 64px;
	height: 4px !important;
}

/* ################################# */

/* RIGHT BUTTONS */

.ytp-right-controls {
	position: relative !important;
	padding-right: 0px;
	bottom: 1px;
}

/* SUBTITLES BUTTON */

.ytp-subtitles-button.ytp-button[title="Subtitles/closed captions unavailable"] {
	display: none !important;
}

.ytp-subtitles-button.ytp-button::after {
	display: none !important;
}

/* SETTINGS BUTTON */

.ytp-button.ytp-settings-button:after {
    background-color: var(--pt-setting-after-label);
	top: 8px !important;
}

.ytp-big-mode .ytp-button.ytp-settings-button::after {
	font-size: 8px !important;
	right: 2px !important;
	top: 5px !important;
}

/* DISPLAY NONE OF THESE */

.ytp-fullerscreen-edu-button, .ytp-multicam-button, .ytp-multicam-button, .ytp-miniplayer-button, .ytp-remote-button {
	display: none !important;
}
/* ... */

